// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project should expand learning objectives children when only parent is mentioned 1`] = `
Array [
  "html/semantics",
  "css/selectors",
  "css/flexbox",
  "css/grid",
  "css/media-queries",
  "js/async/callbacks",
  "js/async/promises",
  "js/data-types/strings",
  "scm/git/setup",
  "scm/git/intro",
  "scm/git/integration",
  "scm/github/setup",
  "scm/github/gh-pages",
  "scm/github/collaboration",
  "scm/github/project-management",
  "scm/github/ci",
  "http/headers",
]
`;

exports[`project should parse a project with learning objectives 1`] = `
Object {
  "learningObjectives": Array [
    "html/semantics",
    "css/selectors",
    "dom/selectors",
    "dom/events",
    "dom/manipulation",
    "js/data-types/primitive-vs-non-primitive",
    "js/data-types/strings",
    "js/variables",
    "js/conditionals",
    "js/functions",
    "js/semantics",
    "ux/user-understanding",
    "ux/prototyping",
  ],
  "locale": "es-ES",
  "path": "test/fixtures/01-a-project-with-learning-objectives",
  "prefix": 1,
  "repo": "Laboratoria/bootcamp",
  "slug": "a-project-with-learning-objectives",
  "title": "A project",
  "track": "js",
  "version": "1.0.0",
}
`;

exports[`project should parse a project with learning objectives validating against known list 1`] = `
Object {
  "learningObjectives": Array [
    "html/semantics",
    "css/selectors",
    "dom/selectors",
    "dom/events",
    "dom/manipulation",
    "js/data-types/primitive-vs-non-primitive",
    "js/data-types/strings",
    "js/variables/declaration",
    "js/conditionals",
    "js/functions",
    "js/semantics",
    "ux/user-understanding",
    "ux/prototyping",
  ],
  "locale": "es-ES",
  "path": "test/fixtures/01-a-project-with-learning-objectives",
  "prefix": 1,
  "repo": "Laboratoria/bootcamp",
  "slug": "a-project-with-learning-objectives",
  "title": "A project",
  "track": "js",
  "version": "1.0.0",
}
`;

exports[`project should parse a project with learning objectives without validating against known list 1`] = `
Object {
  "learningObjectives": Array [
    "html/semantics",
    "css/selectors",
    "dom/selectors",
    "dom/events",
    "dom/manipulation",
    "js/data-types/primitive-vs-non-primitive",
    "js/data-types/strings",
    "js/variables",
    "js/conditionals",
    "js/functions",
    "js/semantics",
    "ux/user-understanding",
    "ux/prototyping",
  ],
  "locale": "es-ES",
  "path": "test/fixtures/01-a-project-with-learning-objectives",
  "prefix": 1,
  "repo": "Laboratoria/bootcamp",
  "slug": "a-project-with-learning-objectives",
  "title": "A project",
  "track": "js",
  "version": "1.0.0",
}
`;

exports[`project should parse portuguese project 1`] = `
Object {
  "learningObjectives": undefined,
  "locale": "pt-BR",
  "parserVersion": "3.0.0",
  "path": "test/fixtures/01-a-project-with-pt-translation",
  "prefix": 1,
  "repo": "Laboratoria/bootcamp",
  "slug": "a-project-with-pt-translation-pt",
  "title": "Cifrado César",
  "track": "js",
  "version": "1.0.0",
}
`;
